--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,7 +1,7 @@
 /*importing google fonts */
-@import url('https://fonts.googleapis.com/css2?famil')
+/*@import url('https://fonts.googleapis.com/css2?family'); */
 
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -20,6 +20,18 @@ body{
     top: 50%;
     left: 50%;
     transform: traslate(-50%, -50%);
+    box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.2),
+                opx 6px 20px 0 rgba(0,0,0,0.19);
+    transition: all 0.3s ease;
+}
+
+
+.info_box.activeInfo,
+.quiz_box.activeQuiz {
+    z-index: 5;
+    opacity: 1;
+    pointer-events: auto;
+    transform: translate(-50%, -50%) scale(1);
 }
 
 /* start quiz button styling */
@@ -36,10 +48,12 @@ body{
 }
 
 .info_box{
-    display: none;
     width: 540px;
     background: orange;
     border-radius: 5px;
+    opacity: 0;
+    pointer-events: none;
+    transform: translate(-50%,-50%) scale(0.9);
 }
 
 .info_box info_title{
@@ -78,6 +92,7 @@ body{
     margin: 0 5px;
     height: 40px;
     width: 100px;
+    outline: none;
     border: 1px solid black;
     border-radius: 5px;
     color: white;
@@ -108,10 +123,12 @@ buttons button.restart{
 
 
 .quiz_box{
-    display: none;
     width: 550px;
     background: white;
     border-radius: 5px;
+    opacity: 0;
+    pointer-events: none;
+    transform: translate(-50%, -50%) scale(0.9);
 }
 
 
@@ -279,4 +296,47 @@ footer .next_btn:hover{
     align-items: center;
     flex-direction: column;
     justify-content: space-between;
+    opacity: 0;
+    pointer-events: none;
+    transform: translate(-50%, -50%) scale(0.5);
+}
+.result_box .icon{
+    font-size: 100px;
+    color: aquamarine;
+    margin-bottom: 10px;
+}
+
+.result_box .complete_text{
+    font-size: 20px;
+    font-weight: 500;
+}
+.result_box .score_text span{
+    display: flex;
+    margin: 10px 0;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.score_text span p{
+    font-weight: 600;
+    padding: 0 4px;
+}
+
+.result_box .buttons{
+    display: flex;
+    margin: 20px 0;
+}
+
+.result_box .buttons button{
+    margin: 0 10px;
+    height: 45px;
+    padding: 0 20px;
+    border: none;
+    outline: none;
+    font-size: 10px;
+    font-weight: 500;
+    border-radius: 5px;
+    border: 1px solid firebrick;
+    cursor: pointer;
+    transition: all 0.3s ease;
 }
