--- a/Assets/style.css
+++ b/Assets/style.css
@@ -21,13 +21,13 @@ body{
     left: 50%;
     transform: traslate(-50%, -50%);
     box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.2),
-                opx 6px 20px 0 rgba(0,0,0,0.19);
+                0px 6px 20px 0 rgba(0,0,0,0.19);
     transition: all 0.3s ease;
 }
 
 
 .info_box.activeInfo,
-.quiz_box.activeQuiz {
+.quiz_box.activeQuiz{
     z-index: 5;
     opacity: 1;
     pointer-events: auto;
@@ -35,7 +35,7 @@ body{
 }
 
 /* start quiz button styling */
-.start btn button{
+.start_btn button{
     font-size: 25px;
     font-weight: 500;
     color: black;
@@ -53,29 +53,30 @@ body{
     border-radius: 5px;
     opacity: 0;
     pointer-events: none;
-    transform: translate(-50%,-50%) scale(0.9);
+    transform: translate(-50%, -50%) scale(0.9);
 }
 
-.info_box info_title{
+.info_box .info_title{
     height: 60px;
     width: 100%;
     border-bottom: 1px solid lightgrey;
     display: flex;
     align-items: center;
-    padding: 0 35px;
+    padding: 0 30px;
     font-size: 20px;
     font-weight: 600;
 }
 
 .info_box .info_list{
-    padding: 15 px 35px;
+    padding: 15px 30px;
 }
 
 .info_box .info_list .info{
     margin: 5px 0;
     font-size: 17px;
 }
-.info_box .info_list .info{
+
+.info_box .info_list .info span{
     font-weight: 600;
     color: black;
 }
@@ -85,7 +86,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    padding: 0 35px;
+    padding: 0 30px;
     border-top: 1px solid lightgrey;
 }
 .info_box .buttons button{
@@ -102,7 +103,7 @@ body{
     transition: all 0.3s ease;
 }
 
-buttons button.restart{
+.buttons button.restart{
     color: white;
     background: blue;
 }
@@ -113,6 +114,7 @@ buttons button.restart{
 
 .buttons button.quit{
     color: red;
+    background: blue;
 }
 
 
@@ -142,7 +144,7 @@ buttons button.restart{
     align-items: center;
     justify-content: space-between;
     border-radius: 5px 5px 0 0;
-    box-shadow: 0px 3px 5px 1px rgba(0,0,0,0,1);
+    box-shadow: 0px 3px 5px 1px rgba(0,0,0,0.1);
 }
 
 
@@ -244,6 +246,21 @@ section .option_list .option:hover{
     color:  red;
     border-color: pink;
     background: black;
+}
+
+.option_list .option.correct{
+    color:green;
+    border-color: pink;
+    background: black;
+}
+.option_list .option.incorrect{
+    color: red;
+    border-color: pink;
+    background: black;
+}
+
+.option_list .option.disabled{
+    pointer-events: none;
 }
 
 .quiz_box footer{
