--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,18 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=banger:wght@200;300;400;500;600;700&display=swap');
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'banger', sans-serif;
 }
  
 body{
     background: orange;
 }
 
-.start_btn, 
-.info_box,
-.quiz_box,
-.result_box{
+
+::selection {
+    color: purple;
+    background: red;
+}
+
+
+.start,
+.square,
+.quiz,
+.results{
     position: absolute;
     top: 50%;
     left: 50%;
@@ -23,9 +31,9 @@ body{
 }
 
 
-.info_box.activeInfo,
-.quiz_box.activeQuiz,
-.result_box.activeResult{
+.square.activeInfo,
+.quiz.activeQuiz,
+.results.activeResult{
     z-index: 5;
     opacity: 1;
     pointer-events: auto;
@@ -33,7 +41,7 @@ body{
 }
 
 /* start quiz button styling */
-.start_btn button{
+.start button{
     font-size: 25px;
     font-weight: 500;
     color: black;
@@ -45,41 +53,43 @@ body{
     cursor: pointer;
 }
 
-.info_box{
+.square{
     width: 540px;
     background: orange;
     border-radius: 5px;
     opacity: 0;
     pointer-events: none;
     transform: translate(-50%, -50%) scale(0.9);
+    transition: all 0.3s ease;
 }
 
-.info_box .info_title{
+.square .data_name{
     height: 60px;
     width: 100%;
     border-bottom: 1px solid lightgrey;
     display: flex;
     align-items: center;
     padding: 0 30px;
+    border-radius: 5px 5px 0 0;
     font-size: 20px;
     font-weight: 600;
 }
 
-.info_box .info_list{
+.square .data_list{
     padding: 15px 30px;
 }
 
-.info_box .info_list .info{
+.square .data_list .data{
     margin: 5px 0;
     font-size: 17px;
 }
 
-.info_box .info_list .info span{
+.square .data_list .data span{
     font-weight: 600;
     color: black;
 }
 
-.info_box .buttons{
+.square .buttons{
     height: 60px;
     display: flex;
     align-items: center;
@@ -87,7 +97,8 @@ body{
     padding: 0 30px;
     border-top: 1px solid lightgrey;
 }
-.info_box .buttons button{
+
+.square .buttons button{
     margin: 0 5px;
     height: 40px;
     width: 100px;
@@ -101,40 +112,21 @@ body{
     transition: all 0.3s ease;
 }
 
-.buttons button.restart{
-    color: white;
-    background: blue;
-}
 
-.buttons button.restart:hover{
-    background: pink;
-}
-
-.buttons button.quit{
-    color: red;
-    background: blue;
-}
-
-
-.buttons button.quit:hover{
-    color: white;
-    background: blue;
-}
-
-
-.quiz_box{
+.quiz{
     width: 550px;
     background: white;
     border-radius: 5px;
     opacity: 0;
     pointer-events: none;
     transform: translate(-50%, -50%) scale(0.9);
+    transition: all 0.3 ease;
 }
 
 
-.quiz_box header{
+.quiz header{
     position: relative;
-    z-index: 99;
+    z-index: 2;
     height: 70px;
     padding: 0 30px;
     background: white;
@@ -146,13 +138,13 @@ body{
 }
 
 
-.quiz_box header .title{
+.quiz header .name{
     font-size: 20px;
     font-weight: 600;
 }
 
 
-.quiz_box header .timer{
+.quiz header .time{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -162,15 +154,16 @@ body{
     border: 1px solid green;
     border-radius: 5px;
     padding: 0 8px; 
+    color: blue;
 }
 
-.quiz_box header .timer .time_text{
+.quiz header .time .ttext{
     font-weight: 400;
     font-size: 17px;
     user-select: none;
 }
 
-.quiz_box header .timer .timer_sec{
+.quiz header .time .tsec{
     font-size: 18px;
     font-weight: 500;
     background: blue;
@@ -184,7 +177,7 @@ body{
     user-select: none;
 }
 
-.quiz_box header .time_line{
+.quiz header .timego{
     position: absolute;
     bottom: 0px;
     left: 0px;
@@ -192,17 +185,17 @@ body{
     background: red;
 }
 
-.quiz_box section{
+section{
     padding: 25px 30px 20px 30px;
     background: white;
 }
 
-.quiz_box section .que_text{
+section .que_text{
     font-size: 25px;
     font-weight: 600;
 }
 
-.quiz_box section .option_list{
+section .option_list{
     padding: 20px 0;
     display: block;
 }
@@ -224,14 +217,14 @@ section .option_list .option{
 section .option_list .option:hover{
     color: aqua;
     background: teal;
-    border-color: olive;
+    border: 1px solid olive;
 }
 
-.option_list .option:last-child{
+section .option_list .option:last-child{
     margin-bottom: 0px; 
 }
 
-.option_list .option .icon{
+section .option_list .option .icon{
     height: 26px;
     width: 26px;
     border: 2px solid transparent;
@@ -240,38 +233,37 @@ section .option_list .option:hover{
     font-size: 13px;
     line-height: 24px;
     pointer-events: none;
-
+    transition: all 0.3s ease;
 }
 
-.option_list .option .icon.tick{
+.option_list .option .icon.check{
     color: green;
     border-color: green;
     background: wheat;
 }
-.option_list .option .icon.cross{
+.option_list .option .icon.circle{
     color:  red;
     border-color: pink;
     background: black;
 }
 
-.option_list .option.correct{
+section .option_list .option.correct{
     color:green;
     border-color: pink;
     background: black;
 }
-.option_list .option.incorrect{
+section .option_list .option.incorrect{
     color: red;
     border-color: pink;
     background: black;
 }
 
-.option_list .option.disabled{
+section .option_list .option.disabled{
     pointer-events: none;
 }
 
-.quiz_box footer{
+footer{
     height: 60px;
-    width: 100%;
     padding: 0 30px;
     display: flex;
     align-items: center;
@@ -279,7 +271,7 @@ section .option_list .option:hover{
    justify-content: space-between;
 }
 
-.quiz_box footer .total_que span{
+footer .total_que span{
     display: flex;
     user-select: none;
 }
@@ -288,28 +280,36 @@ footer .total_que span p{
     padding: 0 5px;
 }
 
-.total_que span p:first-child{
+footer .total_que span p:first-child{
     padding-left: 0px;
 }
 
-footer .next_btn{
-    display: none;
+footer button{
     height: 40px;
     padding: 0 13px;
     font-size: 18px;
     font-weight: 400;
+    cursor: pointer;
     border: none;
     outline: none;
     color: cornflowerblue;
     background: darkgoldenrod;
     border-radius: 5px;
-    border: 1px solid cornflowerblue;
-    cursor: pointer;
-    transition: all 0.3s ease;
+    line-height: 10px;
+    opacity: 0;
+    pointer-events: none;
+   transform: scale(0.95);
+   transition: all 0.3s ease;
 }
 
-footer .next_btn:hover{
+footer button:hover{
     background: purple;
+}
+
+footer button.show{
+    opacity: 1;
+    pointer-events: auto;
+    transform: scale(1);
 }
 
 .result_box{
@@ -321,48 +321,68 @@ footer .next_btn:hover{
     text-align: center;
     align-items: center;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
     opacity: 0;
     pointer-events: none;
-    transform: translate(-50%, -50%) scale(0.5);
+    transform: translate(-50%, -50%) scale(0.9);
 }
-.result_box .icon{
+.results .icon{
     font-size: 100px;
     color: aquamarine;
     margin-bottom: 10px;
 }
 
-.result_box .complete_text{
+.results .complete_text{
     font-size: 20px;
     font-weight: 500;
 }
-.result_box .score_text span{
+.results .score_text span{
     display: flex;
     margin: 10px 0;
     font-size: 18px;
     font-weight: 500;
 }
 
-.score_text span p{
+.results .score_text span p{
     font-weight: 600;
     padding: 0 4px;
 }
 
-.result_box .buttons{
+.results .buttons{
     display: flex;
     margin: 20px 0;
 }
 
-.result_box .buttons button{
+.results .buttons button{
     margin: 0 10px;
     height: 45px;
     padding: 0 20px;
     border: none;
     outline: none;
-    font-size: 10px;
+    font-size: 18px;
     font-weight: 500;
     border-radius: 5px;
     border: 1px solid firebrick;
     cursor: pointer;
     transition: all 0.3s ease;
+}
+
+.buttons button.again{
+    color: white;
+    background: blue;
+}
+
+.buttons button.again:hover{
+    background: pink;
+}
+
+.buttons button.quit{
+    color: red;
+    background: blue;
+}
+
+
+.buttons button.quit:hover{
+    color: white;
+    background: blue;
 }
