--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,72 +1,67 @@
 @import url('https://fonts.googleapis.com/css2?family=banger:wght@200;300;400;500;600;700&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'banger', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
- 
+
 body{
-    background: orange;
+    background: rgb(243, 159, 4);
 }
 
-
-::selection {
-    color: purple;
-    background: red;
+::selection{
+    color: black;
+    background: rgb(243, 159, 4);
 }
 
-
-.start,
-.square,
-.quiz,
-.results{
+.start_btn,
+.info_box,
+.quiz_box,
+.result_box{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: traslate(-50%, -50%);
-    box-shadow: 0px 4px 8px 0 rgba(0,0,0,0.2),
-                0px 6px 20px 0 rgba(0,0,0,0.19);
-    transition: all 0.3s ease;
+    transform: translate(-50%, -50%);
+   
 }
 
-
-.square.activeInfo,
-.quiz.activeQuiz,
-.results.activeResult{
-    z-index: 5;
+.info_box.activeInfo,
+.quiz_box.activeQuiz,
+.result_box.activeResult{
     opacity: 1;
+    z-index: 5;
     pointer-events: auto;
     transform: translate(-50%, -50%) scale(1);
 }
 
-/* start quiz button styling */
-.start button{
+.start_btn button{
     font-size: 25px;
     font-weight: 500;
-    color: black;
+    color: rgb(243, 159, 4);
     padding: 15px 30px;
     outline: none;
     border: none;
     border-radius: 5px;
-    background: orange;
+    background:black;
     cursor: pointer;
 }
 
-.square{
+.info_box{
     width: 540px;
-    background: orange;
+    background: rgb(243, 159, 4);
     border-radius: 5px;
+    transform: translate(-50%, -50%) scale(0.9);
     opacity: 0;
     pointer-events: none;
-    transform: translate(-50%, -50%) scale(0.9);
     transition: all 0.3s ease;
 }
 
-.square .data_name{
+.info_box .info-title{
     height: 60px;
     width: 100%;
-    border-bottom: 1px solid lightgrey;
+    border-bottom: 1px solid rgb(231, 9, 9);
     display: flex;
     align-items: center;
     padding: 0 30px;
@@ -75,119 +70,114 @@ body{
     font-weight: 600;
 }
 
-.square .data_list{
+.info_box .info-list{
     padding: 15px 30px;
 }
 
-.square .data_list .data{
+.info_box .info-list .info{
     margin: 5px 0;
     font-size: 17px;
 }
 
-.square .data_list .data span{
+.info_box .info-list .info span{
     font-weight: 600;
-    color: black;
+    color: rgb(243, 159, 4);
 }
-
-.square .buttons{
+.info_box .buttons{
     height: 60px;
     display: flex;
     align-items: center;
     justify-content: flex-end;
     padding: 0 30px;
-    border-top: 1px solid lightgrey;
+    border-top: 1px rgb(231, 9, 9);
 }
 
-.square .buttons button{
+.info_box .buttons button{
     margin: 0 5px;
     height: 40px;
     width: 100px;
-    outline: none;
-    border: 1px solid black;
-    border-radius: 5px;
-    color: white;
     font-size: 16px;
     font-weight: 500;
     cursor: pointer;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    border: 1px solid rgb(243, 159, 4);
     transition: all 0.3s ease;
 }
 
-
-.quiz{
+.quiz_box{
     width: 550px;
-    background: white;
+    background: black;
     border-radius: 5px;
+    transform: translate(-50%, -50%) scale(0.9);
     opacity: 0;
     pointer-events: none;
-    transform: translate(-50%, -50%) scale(0.9);
-    transition: all 0.3 ease;
+    transition: all 0.3s ease;
 }
 
-
-.quiz header{
+.quiz_box header{
     position: relative;
     z-index: 2;
     height: 70px;
     padding: 0 30px;
-    background: white;
+    background:black;
+    border-radius: 5px 5px 0 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-radius: 5px 5px 0 0;
     box-shadow: 0px 3px 5px 1px rgba(0,0,0,0.1);
 }
 
-
-.quiz header .name{
+.quiz_box header .title{
     font-size: 20px;
     font-weight: 600;
 }
 
-
-.quiz header .time{
+.quiz_box header .timer{
+    color: black;
+    background: rgb(243, 159, 4);
+    border: 1px solid black;
+    height: 45px;
+    padding: 0 8px;
+    border-radius: 5px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     width: 145px;
-    height: 45px;
-    background: violet;
-    border: 1px solid green;
-    border-radius: 5px;
-    padding: 0 8px; 
-    color: blue;
 }
 
-.quiz header .time .ttext{
+.quiz_box header .timer .time_left_txt{
     font-weight: 400;
     font-size: 17px;
     user-select: none;
 }
 
-.quiz header .time .tsec{
+.quiz_box header .timer .timer_sec{
     font-size: 18px;
     font-weight: 500;
-    background: blue;
     height: 30px;
     width: 45px;
-    color: white;
-    text-align: center;
-    line-height: 30px;
+    color: rgb(243, 159, 4);
     border-radius: 5px;
-    border: 1px solid black;
+    line-height: 30px;
+    text-align: center;
+    background: #343a40;
+    border: 1px solid #343a40;
     user-select: none;
 }
 
-.quiz header .timego{
+.quiz_box header .time_line{
     position: absolute;
     bottom: 0px;
     left: 0px;
     height: 3px;
-    background: red;
+    background: rgb(243, 159, 4);
 }
 
 section{
     padding: 25px 30px 20px 30px;
-    background: white;
+    background:black;
 }
 
 section .que_text{
@@ -196,32 +186,48 @@ section .que_text{
 }
 
 section .option_list{
-    padding: 20px 0;
-    display: block;
+    padding: 20px 0px;
+    display: block;   
 }
 
 section .option_list .option{
-    background: burlywood;
-    border: 1px solid chocolate;
+    background: rgb(243, 159, 4);
+    border: 1px solid black;
     border-radius: 5px;
     padding: 8px 15px;
-    margin-bottom: 15px;
     font-size: 17px;
+    margin-bottom: 15px;
+    cursor: pointer;
+    transition: all 0.3s ease;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-
-section .option_list .option:hover{
-    color: aqua;
-    background: teal;
-    border: 1px solid olive;
 }
 
 section .option_list .option:last-child{
-    margin-bottom: 0px; 
+    margin-bottom: 0px;
+}
+
+section .option_list .option:hover{
+    color: black;
+    background: rgb(231, 9, 9);
+    border: 1px solid black;
+}
+
+section .option_list .option.correct{
+    color: #155724;
+    background: #d4edda;
+    border: 1px solid #c3e6cb;
+}
+
+section .option_list .option.incorrect{
+    color: #721c24;
+    background: #f8d7da;
+    border: 1px solid #f5c6cb;
+}
+
+section .option_list .option.disabled{
+    pointer-events: none;
 }
 
 section .option_list .option .icon{
@@ -231,35 +237,20 @@ section .option_list .option .icon{
     border-radius: 50%;
     text-align: center;
     font-size: 13px;
-    line-height: 24px;
     pointer-events: none;
     transition: all 0.3s ease;
+    line-height: 24px;
+}
+.option_list .option .icon.tick{
+    color: #23903c;
+    border-color: #23903c;
+    background: #d4edda;
 }
 
-.option_list .option .icon.check{
-    color: green;
-    border-color: green;
-    background: wheat;
-}
-.option_list .option .icon.circle{
-    color:  red;
-    border-color: pink;
-    background: black;
-}
-
-section .option_list .option.correct{
-    color:green;
-    border-color: pink;
-    background: black;
-}
-section .option_list .option.incorrect{
-    color: red;
-    border-color: pink;
-    background: black;
-}
-
-section .option_list .option.disabled{
-    pointer-events: none;
+.option_list .option .icon.cross{
+    color: #a42834;
+    background: #f8d7da;
+    border-color: #a42834;
 }
 
 footer{
@@ -267,14 +258,15 @@ footer{
     padding: 0 30px;
     display: flex;
     align-items: center;
-    border-top: 1px lightblue;
-   justify-content: space-between;
+    justify-content: space-between;
+    border-top: 1px solid lightgrey;
 }
 
 footer .total_que span{
     display: flex;
     user-select: none;
 }
+
 footer .total_que span p{
     font-weight: 500;
     padding: 0 5px;
@@ -292,18 +284,20 @@ footer button{
     cursor: pointer;
     border: none;
     outline: none;
-    color: cornflowerblue;
-    background: darkgoldenrod;
+    color: black;
     border-radius: 5px;
+    background: rgb(243, 159, 4);
+    border: 1px solid rgb(243, 159, 4);
     line-height: 10px;
     opacity: 0;
     pointer-events: none;
-   transform: scale(0.95);
-   transition: all 0.3s ease;
+    transform: scale(0.95);
+    transition: all 0.3s ease;
 }
 
 footer button:hover{
-    background: purple;
+    background: #f30202;
+    border: black;
 }
 
 footer button.show{
@@ -313,76 +307,80 @@ footer button.show{
 }
 
 .result_box{
-    background: chartreuse;
-    width: 450px;
-    padding: 25px 30px;
+    background: black;
     border-radius: 5px;
     display: flex;
-    text-align: center;
+    padding: 25px 30px;
+    width: 450px;
     align-items: center;
     flex-direction: column;
     justify-content: center;
+    transform: translate(-50%, -50%) scale(0.9);
     opacity: 0;
     pointer-events: none;
-    transform: translate(-50%, -50%) scale(0.9);
+    transition: all 0.3s ease;
 }
-.results .icon{
+
+.result_box .icon{
     font-size: 100px;
-    color: aquamarine;
+    color: rgb(243, 159, 4);
     margin-bottom: 10px;
 }
 
-.results .complete_text{
+.result_box .complete_text{
     font-size: 20px;
     font-weight: 500;
 }
-.results .score_text span{
+
+.result_box .score_text span{
     display: flex;
     margin: 10px 0;
     font-size: 18px;
     font-weight: 500;
 }
 
-.results .score_text span p{
-    font-weight: 600;
+.result_box .score_text span p{
     padding: 0 4px;
+    font-weight: 600;
 }
 
-.results .buttons{
+.result_box .buttons{
     display: flex;
     margin: 20px 0;
 }
 
-.results .buttons button{
+.result_box .buttons button{
     margin: 0 10px;
     height: 45px;
     padding: 0 20px;
-    border: none;
-    outline: none;
     font-size: 18px;
     font-weight: 500;
-    border-radius: 5px;
-    border: 1px solid firebrick;
     cursor: pointer;
+    border: none;
+    outline: none;
+    border-radius: 5px;
+    border: 1px solid rgb(243, 159, 4);
     transition: all 0.3s ease;
 }
 
-.buttons button.again{
-    color: white;
-    background: blue;
+.buttons button.restart{
+    color: black;
+    background: rgb(243, 159, 4);
 }
 
-.buttons button.again:hover{
-    background: pink;
+.buttons button.restart:hover{
+    background: black;
 }
 
 .buttons button.quit{
-    color: red;
-    background: blue;
+    color: rgb(243, 159, 4);
+    background: black;
 }
-
 
 .buttons button.quit:hover{
-    color: white;
-    background: blue;
+    color: black;
+    background: rgb(243, 159, 4);
 }
+
+
+
